# series-de-tiempo-utb

./: README.md  clase-01.ipynb  nota-01.ipynb  nota-02.ipynb  nota-03.ipynb  nota-04.ipynb  nota-05.ipynb  nota-06.ipynb  note-04.ipynb  pyproject.toml
actividades/: actividad1.html  actividad2.html  actividad2.ipynb  model-regr-actividades.html  model-regr-actividades.ipynb  pyproject.toml
actividades/data/: databanrep.xlsx
