[project]
name = "series-de-tiempo-utb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "wbgapi>=1.0.14",
]
