[project]
name = "series-de-tiempo-utb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ucimlrepo>=0.0.7",
    "wbgapi>=1.0.14",
    "yfinance>=1.2.0",
]
