[project]
name = "actividad-1-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "statsmodels>=0.14.6",
    "yfinance>=1.1.0",
]
